Added a .jar file
Obviously doesn't work
Also managed to update gradle.build to Java Version 16